[gd_scene load_steps=5 format=3 uid="uid://b5ho1oy8lu7r5"]

[ext_resource type="Script" uid="uid://b06dv83ixeb7g" path="res://ui/dialogue_box/dialogue_box.gd" id="1_jrjoh"]

[sub_resource type="Animation" id="Animation_pqpfu"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6aonj"]
resource_name = "character"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ltalu"]
_data = {
&"RESET": SubResource("Animation_pqpfu"),
&"character": SubResource("Animation_6aonj")
}

[node name="DialogueBox" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrjoh")

[node name="DialogueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "asdasd"
visible_characters = 0
visible_ratio = 0.0

[node name="TextAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ltalu")
}
